# nix-devshells

./: LICENSE  README.md  flake.nix  justfile  renovate.json  typos.toml  vulnix-whitelist.toml
.githooks/: pre-commit  pre-push
.github/workflow/: check.yml
.github/workflows/: check.yml  ci.yml  vulns.yml
lib/: go.nix  rust.nix  solidity.nix
nix/: devshells.nix
pkgs/: agave.nix  anchor.nix
pkgs/solana/: agave.nix  anchor.nix
scripts/: anchor-nix.sh
templates/go/: .gitignore  flake.nix  go.work  justfile
templates/go/cmd/my-app/: go.mod  main.go
templates/go/pkg/mylib/: go.mod  mylib.go
templates/rust/: .gitignore  Cargo.toml  flake.nix  justfile
templates/rust/crates/my-crate/: Cargo.toml
templates/solana/: .gitignore  Anchor.toml  Cargo.toml  flake.nix  justfile
templates/solana/programs/my-program/: Cargo.toml
templates/solana/programs/my-program/src/: lib.rs
