[workspace]
resolver = "2"
members = ["programs/*"]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

implicit_return = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
too_many_lines = "allow"
cognitive_complexity = "allow"

# Anchor-specific allows
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
wildcard_imports = "allow"
result_large_err = "allow"
negative_feature_names = "allow"
multiple_crate_versions = "allow"
needless_pass_by_value = "allow"
used_underscore_binding = "allow"
pub_underscore_fields = "allow"

[workspace.lints.rust]
unexpected_cfgs = "allow"
deprecated = "allow"
dead_code = "allow"
single_use_lifetimes = "allow"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
anchor-lang = "0.32.1"

# Testing
mollusk-svm = { version = "0.4.1", default-features = false }
mollusk-svm-bencher = { version = "0.4.1", default-features = false }

[profile.dev]
debug = 0
debug-assertions = true
overflow-checks = true
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
debug = 0
strip = "symbols"
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
